<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/choose"
        android:textColor="#0B0000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:background="#23CDDC39"
        android:text="@string/chooseNanny"
        android:textColor="#130101"
        android:textSize="18sp"
        android:onClick="regisBaby"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:background="#1DCDDC39"
        android:text="@string/chooseBaby"
        android:textColor="#170101"
        android:textSize="18sp"
        android:onClick="regisNanny"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="90dp"
        android:background="#0E00BCD4"
        android:gravity="center"
        android:text="@string/backlogin"
        android:onClick="backtologin"/>


</LinearLayout>
