<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".help">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:background="#6100BCD4"
        android:text="@string/helpcenter"
        android:textColor="#0E0E0E"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:text="@string/helpcenterline"
        android:textColor="#0E0E0E"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:text="@string/helpcenterphone"
        android:textColor="#0E0E0E"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:text="@string/helpcentermail"
        android:textColor="#0E0E0E"
        android:textSize="20sp" />
</LinearLayout>