<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="30dp"
        android:text="@string/appname"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="221dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="203dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="425dp"
        android:layout_marginBottom="349dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="74dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="229dp"
        android:layout_height="226dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/email2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="246dp"
        android:layout_height="45dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="15dp"
        android:background="#1600BCD4"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pass2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <EditText
        android:id="@+id/pass2"
        android:layout_width="246dp"
        android:layout_height="45dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="17dp"
        android:background="#1600BCD4"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/choose_image_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email2" />

    <Button
        android:id="@+id/choose_image_btn"
        android:layout_width="116dp"
        android:layout_height="47dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="123dp"
        android:background="#185EE9"
        android:text="@string/loginB"
        android:textColor="#FAF3F6"
        android:textColorHighlight="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass2" />

    <View
        android:id="@+id/view"
        android:layout_width="482dp"
        android:layout_height="74dp"
        android:background="#81D5EBFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="22dp"
        android:text="@string/account"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="22dp"
        android:text="@string/register"
        android:onClick="toregister"
        android:textColor="#3F51B5"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="585dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="203dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="22dp"
        android:text="@string/foegetpass"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_image_btn" />



</androidx.constraintlayout.widget.ConstraintLayout>